Assignment 4/ass4_12CS10012/y.output
Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   ENUMERATION_CONSTANT
   SINGLE_LINE_COMMENT
   MULTI_LINE_COMMENT


State 325 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 constant: INTEGER_CONSTANT
    6         | FLOATING_CONSTANT
    7         | CHAR_CONST

    8 enumeration_constant: IDENTIFIER

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' argument_expression_list_opt ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression POINTER IDENTIFIER
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | '(' type_name ')' '{' initializer_list '}'
   17                   | '(' type_name ')' '{' initializer_list ',' '}'

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression

   20 argument_expression_list_opt: argument_expression_list
   21                             | %empty

   22 unary_expression: postfix_expression
   23                 | INCREMENT unary_expression
   24                 | DECREMENT unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF '(' type_name ')'

   28 unary_operator: '&'
   29               | '*'
   30               | '+'
   31               | '-'
   32               | '~'
   33               | '!'

   34 cast_expression: unary_expression
   35                | '(' type_name ')' cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression '*' cast_expression
   38                          | multiplicative_expression '/' cast_expression
   39                          | multiplicative_expression '%' cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression '+' multiplicative_expression
   42                    | additive_expression '-' multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_SHIFT additive_expression
   45                 | shift_expression RIGHT_SHIFT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression '<' shift_expression
   48                      | relational_expression '>' shift_expression
   49                      | relational_expression LESS_EQUALS shift_expression
   50                      | relational_expression GREATER_EQUALS shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUALS relational_expression
   53                    | equality_expression NOT_EQUALS relational_expression

   54 AND_expression: equality_expression
   55               | AND_expression '&' equality_expression

   56 exclusive_OR_expression: AND_expression
   57                        | exclusive_OR_expression '^' AND_expression

   58 inclusive_OR_expression: exclusive_OR_expression
   59                        | inclusive_OR_expression '|' exclusive_OR_expression

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression AND inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression OR logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression '?' expression ':' conditional_expression

   66 assignment_operator: '='
   67                    | MULTIPLY_ASSIGN
   68                    | DIVIDE_ASSIGN
   69                    | MODULO_ASSIGN
   70                    | ADD_ASSIGN
   71                    | SUBTRACT_ASSIGN
   72                    | LEFT_SHIFT_ASSIGN
   73                    | RIGHT_SHIFT_ASSIGN
   74                    | AND_ASSIGN
   75                    | XOR_ASSIGN
   76                    | OR_ASSIGN

   77 assignment_expression: conditional_expression
   78                      | unary_expression assignment_operator assignment_expression

   79 constant_expression: conditional_expression

   80 expression: assignment_expression
   81           | expression ',' assignment_expression

   82 declaration: declaration_specifiers init_declarator_list_opt ';'

   83 init_declarator_list_opt: init_declarator_list
   84                         | %empty

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | %empty

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | %empty

  116 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  117               | ENUM identifier_opt '{' enumerator_list ',' '}'
  118               | ENUM IDENTIFIER

  119 identifier_opt: IDENTIFIER
  120               | %empty

  121 enumerator_list: enumerator
  122                | enumerator_list ',' enumerator

  123 enumerator: enumeration_constant
  124           | enumeration_constant '=' constant_expression

  125 type_qualifier: CONST
  126               | RESTRICT
  127               | VOLATILE

  128 function_specifier: INLINE

  129 declarator: pointer_opt direct_declarator

  130 pointer_opt: pointer
  131            | %empty

  132 direct_declarator: IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  135                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  136                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  137                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  138                  | direct_declarator '(' parameter_type_list ')'
  139                  | direct_declarator '(' identifier_list_opt ')'

  140 type_qualifier_list_opt: type_qualifier_list
  141                        | %empty

  142 assignment_expression_opt: assignment_expression
  143                          | %empty

  144 identifier_list_opt: identifier_list
  145                    | %empty

  146 pointer: '*' type_qualifier_list_opt
  147        | '*' type_qualifier_list_opt pointer

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list: parameter_list
  151                    | parameter_list ',' ELLIPSIS

  152 parameter_list: parameter_declaration
  153               | parameter_list ',' parameter_declaration

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list ',' IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initializer: assignment_expression
  160            | '{' initializer_list '}'
  161            | '{' initializer_list ',' '}'

  162 initializer_list: designation_opt initializer
  163                 | initializer_list ',' designation_opt initializer

  164 designation_opt: designation
  165                | %empty

  166 designation: designator_list '='

  167 designator_list: designator
  168                | designator_list designator

  169 designator: '[' constant_expression ']'
  170           | '.' IDENTIFIER

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER ':' statement
  178                  | CASE constant_expression ':' statement
  179                  | DEFAULT ':' statement

  180 compound_statement: '{' block_item_list_opt '}'

  181 block_item_list_opt: block_item_list
  182                    | %empty

  183 block_item_list: block_item
  184                | block_item_list block_item

  185 block_item: declaration
  186           | statement

  187 expression_statement: expression_opt ';'

  188 expression_opt: expression
  189               | %empty

  190 selection_statement: IF '(' expression ')' statement ELSE statement
  191                    | IF '(' expression ')' statement
  192                    | SWITCH '(' expression ')' statement

  193 iteration_statement: WHILE '(' expression ')' statement
  194                    | DO statement WHILE '(' expression ')' ';'
  195                    | FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  196                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  197 jump_statement: GOTO IDENTIFIER ';'
  198               | CONTINUE ';'
  199               | BREAK ';'
  200               | RETURN expression_opt ';'

  201 translation_unit: external_declaration
  202                 | translation_unit external_declaration

  203 external_declaration: function_definition
  204                     | declaration

  205 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  206 declaration_list_opt: declaration_list
  207                     | %empty

  208 declaration_list: declaration
  209                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 33
'%' (37) 39
'&' (38) 28 55
'(' (40) 4 11 16 17 27 35 133 138 139 190 191 192 193 194 195 196
')' (41) 4 11 16 17 27 35 133 138 139 190 191 192 193 194 195 196
'*' (42) 29 37 137 146 147
'+' (43) 30 41
',' (44) 17 19 81 92 117 122 151 153 157 161 163
'-' (45) 31 42
'.' (46) 12 170
'/' (47) 38
':' (58) 65 177 178 179
';' (59) 82 187 194 195 196 197 198 199 200
'<' (60) 47
'=' (61) 66 94 124 166
'>' (62) 48
'?' (63) 65
'[' (91) 10 134 135 136 137 169
']' (93) 10 134 135 136 137 169
'^' (94) 57
'{' (123) 16 17 116 117 160 161 180
'|' (124) 59
'}' (125) 16 17 116 117 160 161 180
'~' (126) 32
error (256)
AUTO (258) 97
BREAK (259) 199
CASE (260) 178
CHAR (261) 100
CONST (262) 125
CONTINUE (263) 198
DEFAULT (264) 179
DO (265) 194
DOUBLE (266) 105
ELSE (267) 190
ENUM (268) 116 117 118
EXTERN (269) 95
FLOAT (270) 104
FOR (271) 195 196
GOTO (272) 197
IF (273) 190 191
INLINE (274) 128
INT (275) 102
LONG (276) 103
REGISTER (277) 98
RESTRICT (278) 126
RETURN (279) 200
SHORT (280) 101
SIGNED (281) 106
SIZEOF (282) 26 27
STATIC (283) 96 135 136
STRUCT (284)
SWITCH (285) 192
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 107
VOID (289) 99
VOLATILE (290) 127
WHILE (291) 193 194
BOOL (292) 108
COMPLEX (293) 109
IMAGINARY (294) 110
IDENTIFIER (295) 1 8 12 13 118 119 132 156 157 170 177 197
INTEGER_CONSTANT (296) 5
FLOATING_CONSTANT (297) 6
ENUMERATION_CONSTANT (298)
CHAR_CONST (299) 7
STRING_LITERAL (300) 3
POINTER (301) 13
INCREMENT (302) 14 23
DECREMENT (303) 15 24
LEFT_SHIFT (304) 44
RIGHT_SHIFT (305) 45
LESS_EQUALS (306) 49
GREATER_EQUALS (307) 50
EQUALS (308) 52
NOT_EQUALS (309) 53
AND (310) 61
OR (311) 63
ELLIPSIS (312) 151
MULTIPLY_ASSIGN (313) 67
DIVIDE_ASSIGN (314) 68
MODULO_ASSIGN (315) 69
ADD_ASSIGN (316) 70
SUBTRACT_ASSIGN (317) 71
LEFT_SHIFT_ASSIGN (318) 72
RIGHT_SHIFT_ASSIGN (319) 73
AND_ASSIGN (320) 74
XOR_ASSIGN (321) 75
OR_ASSIGN (322) 76
SINGLE_LINE_COMMENT (323)
MULTI_LINE_COMMENT (324)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4, on right: 9
constant (96)
    on left: 5 6 7, on right: 2
enumeration_constant (97)
    on left: 8, on right: 123 124
postfix_expression (98)
    on left: 9 10 11 12 13 14 15 16 17, on right: 10 11 12 13 14 15
    22
argument_expression_list (99)
    on left: 18 19, on right: 19 20
argument_expression_list_opt (100)
    on left: 20 21, on right: 11
unary_expression (101)
    on left: 22 23 24 25 26 27, on right: 23 24 26 34 78
unary_operator (102)
    on left: 28 29 30 31 32 33, on right: 25
cast_expression (103)
    on left: 34 35, on right: 25 35 36 37 38 39
multiplicative_expression (104)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
additive_expression (105)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (106)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
relational_expression (107)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
equality_expression (108)
    on left: 51 52 53, on right: 52 53 54 55
AND_expression (109)
    on left: 54 55, on right: 55 56 57
exclusive_OR_expression (110)
    on left: 56 57, on right: 57 58 59
inclusive_OR_expression (111)
    on left: 58 59, on right: 59 60 61
logical_AND_expression (112)
    on left: 60 61, on right: 61 62 63
logical_OR_expression (113)
    on left: 62 63, on right: 63 64 65
conditional_expression (114)
    on left: 64 65, on right: 65 77 79
assignment_operator (115)
    on left: 66 67 68 69 70 71 72 73 74 75 76, on right: 78
assignment_expression (116)
    on left: 77 78, on right: 18 19 78 80 81 135 136 142 159
constant_expression (117)
    on left: 79, on right: 124 169 178
expression (118)
    on left: 80 81, on right: 4 10 65 81 188 190 191 192 193 194
declaration (119)
    on left: 82, on right: 185 196 204 208 209
init_declarator_list_opt (120)
    on left: 83 84, on right: 82
declaration_specifiers (121)
    on left: 85 86 87 88, on right: 82 89 154 155 205
declaration_specifiers_opt (122)
    on left: 89 90, on right: 85 86 87 88
init_declarator_list (123)
    on left: 91 92, on right: 83 92
init_declarator (124)
    on left: 93 94, on right: 91 92
storage_class_specifier (125)
    on left: 95 96 97 98, on right: 85
type_specifier (126)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    86 112
specifier_qualifier_list (127)
    on left: 112 113, on right: 114 158
specifier_qualifier_list_opt (128)
    on left: 114 115, on right: 112 113
enum_specifier (129)
    on left: 116 117 118, on right: 111
identifier_opt (130)
    on left: 119 120, on right: 116 117
enumerator_list (131)
    on left: 121 122, on right: 116 117 122
enumerator (132)
    on left: 123 124, on right: 121 122
type_qualifier (133)
    on left: 125 126 127, on right: 87 113 148 149
function_specifier (134)
    on left: 128, on right: 88
declarator (135)
    on left: 129, on right: 93 94 133 154 205
pointer_opt (136)
    on left: 130 131, on right: 129
direct_declarator (137)
    on left: 132 133 134 135 136 137 138 139, on right: 129 134 135
    136 137 138 139
type_qualifier_list_opt (138)
    on left: 140 141, on right: 134 135 137 146 147
assignment_expression_opt (139)
    on left: 142 143, on right: 134
identifier_list_opt (140)
    on left: 144 145, on right: 139
pointer (141)
    on left: 146 147, on right: 130 147
type_qualifier_list (142)
    on left: 148 149, on right: 136 140 149
parameter_type_list (143)
    on left: 150 151, on right: 138
parameter_list (144)
    on left: 152 153, on right: 150 151 153
parameter_declaration (145)
    on left: 154 155, on right: 152 153
identifier_list (146)
    on left: 156 157, on right: 144 157
type_name (147)
    on left: 158, on right: 16 17 27 35
initializer (148)
    on left: 159 160 161, on right: 94 162 163
initializer_list (149)
    on left: 162 163, on right: 16 17 160 161 163
designation_opt (150)
    on left: 164 165, on right: 162 163
designation (151)
    on left: 166, on right: 164
designator_list (152)
    on left: 167 168, on right: 166 168
designator (153)
    on left: 169 170, on right: 167 168
statement (154)
    on left: 171 172 173 174 175 176, on right: 177 178 179 186 190
    191 192 193 194 195 196
labeled_statement (155)
    on left: 177 178 179, on right: 171
compound_statement (156)
    on left: 180, on right: 172 205
block_item_list_opt (157)
    on left: 181 182, on right: 180
block_item_list (158)
    on left: 183 184, on right: 181 184
block_item (159)
    on left: 185 186, on right: 183 184
expression_statement (160)
    on left: 187, on right: 173
expression_opt (161)
    on left: 188 189, on right: 187 195 196 200
selection_statement (162)
    on left: 190 191 192, on right: 174
iteration_statement (163)
    on left: 193 194 195 196, on right: 175
jump_statement (164)
    on left: 197 198 199 200, on right: 176
translation_unit (165)
    on left: 201 202, on right: 0 202
external_declaration (166)
    on left: 203 204, on right: 201 202
function_definition (167)
    on left: 205, on right: 203
declaration_list_opt (168)
    on left: 206 207, on right: 205
declaration_list (169)
    on left: 208 209, on right: 206 209


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHAR .

    $default  reduce using rule 100 (type_specifier)


State 3

  125 type_qualifier: CONST .

    $default  reduce using rule 125 (type_qualifier)


State 4

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


State 5

  116 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  117               | ENUM . identifier_opt '{' enumerator_list ',' '}'
  118               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 33


State 6

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: FLOAT .

    $default  reduce using rule 104 (type_specifier)


State 8

  128 function_specifier: INLINE .

    $default  reduce using rule 128 (function_specifier)


State 9

  102 type_specifier: INT .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  126 type_qualifier: RESTRICT .

    $default  reduce using rule 126 (type_qualifier)


State 13

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: VOID .

    $default  reduce using rule 99 (type_specifier)


State 18

  127 type_qualifier: VOLATILE .

    $default  reduce using rule 127 (type_qualifier)


State 19

  108 type_specifier: BOOL .

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: COMPLEX .

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


State 22

  204 external_declaration: declaration .

    $default  reduce using rule 204 (external_declaration)


State 23

   82 declaration: declaration_specifiers . init_declarator_list_opt ';'
  205 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 34

    ';'       reduce using rule 84 (init_declarator_list_opt)
    $default  reduce using rule 131 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   85 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   86 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 27

   87 declaration_specifiers: type_qualifier . declaration_specifiers_opt
